Changes so doLayout=true more-or-less works out of the box (ie, without user having to specify CSS rules). Still buggy though.
git-svn-id: http://svn.dojotoolkit.org/src@4051 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/trunk/src/widget/templates/HtmlTabContainer.css
+++ b/trunk/src/widget/templates/HtmlTabContainer.css
@@ -5,6 +5,7 @@
 .dojoTabPaneWrapper {
 	position : relative;
 	border : 1px solid;
+	clear: both;
 }
 
 .dojoTabLabels-top {
@@ -14,6 +15,13 @@
 	overflow : visible;
 	margin-bottom : -1px;
 	width : 100%;
+	z-index: 2;	/* so the bottom of the tab label will cover up the border of dojoTabPaneWrapper */
+}
+.dojoTabLabels-top-noLayout {
+	overflow : visible;
+	margin-bottom : -1px;
+	width : 100%;
+	z-index: 2;
 }
 
 .dojoTabPaneTab {
@@ -81,6 +89,7 @@
 	overflow : visible;
 	margin-top : -1px;
 	width : 100%;
+	z-index: 2;
 }
 
 .dojoTabLabels-bottom .dojoTabPaneTab {
@@ -113,6 +122,7 @@
 	right : 0px;
 	overflow : visible;
 	margin-left : -1px;
+	z-index: 2;
 }
 
 .dojoTabLabels-right-h .dojoTabPaneTab {
@@ -140,6 +150,7 @@
 	left : 0px;
 	overflow : visible;
 	margin-right : -1px;
+	z-index: 2;
 }
 
 .dojoTabLabels-left-h .dojoTabPaneTab {
